# SDL_Player

./: .clang-format  CMakeLists.txt  LICENSE  README.md  format_count.sh
include/: audio.h  demux.h  log.h  packqueue.h  player.h  playerctx.h  renderview.h  sdlapp.h  threadbase.h  timer.h  videodecode.h
src/: audio.cpp  demux.cpp  log.cpp  main.cpp  packqueue.cpp  player.cpp  renderview.cpp  sdlapp.cpp  threadbase.cpp  timer.cpp  videodecode.cpp
